# dbt-coverage

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  coverage-test.json  pyproject.toml  tox.ini
.github/: CODEOWNERS
.github/workflows/: linters-tests.yml  linters.yml  tests.yml
dbt_coverage/: __init__.py  coverage-test.json  tmp.json
tests/integration/: docker-compose.yml  test_init.py
tests/integration/patches/: add_unit_test.patch  test_compare_new_column.patch  test_compare_new_table.patch
tests/integration/profiles/: profiles.yml
tests/unit/: test_init.py
