[tool.poetry]
name = "dbt-coverage"
version = "0.4.2"
description = "One-stop-shop for docs and test coverage of dbt projects"
authors = ["Andrej Švec <asvec@slido.com>"]
readme = 'README.md'
license = "MIT"
repository = "https://github.com/slidoapp/dbt-coverage"
homepage = "https://github.com/slidoapp/dbt-coverage"
documentation = "https://github.com/slidoapp/dbt-coverage"
classifiers = [
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.7"
typer = ">=0.4,<1"

[tool.poetry.group.dev.dependencies]
black = {version = "==24.2.0", python = ">=3.8"}  # Use the same version as in .pre-commit-config.yaml
isort = {version = "==5.13.2", python = ">=3.8"}  # Use the same version as in .pre-commit-config.yaml
pre-commit = {version = "^3.6.2", python = ">=3.9"}

tox = { version = "^4", python = "^3.7" }
tomli = { version = "*", python = "^3.7" }  # Needed for a successful resolution of tox's transitive dependencies
typing-extensions = { version = "*", python = "^3.7" }  # Needed for a successful resolution of tox's transitive dependencies
colorama = { version = "*", python = "^3.7" }  # Needed for a successful resolution of tox's transitive dependencies

# Needed for running tests locally
[tool.poetry.group.test.dependencies]
pytest = "^7"
pytest-docker = "^2"
packaging = "*"  # Required for version comparison in tests

dbt-core = { version = "~1.11.0", python = "^3.10" }
dbt-postgres = { version = "~1.10.0", python = "^3.10" }  # 1.11 not yet on PyPI
importlib-metadata = { version = "*", python = "^3.9" }  # Needed for a successful resolution of dbt's transitive dependencies

# click is transitively required by both typer (main, Python 3.7+) and dbt-core
# 1.11.1+ (which requires click >=8.2, which in turn requires Python 3.10+).
# Declare both constraints so poetry resolves click 8.1.x on older Python and
# click 8.3.x on Python 3.10+.
click = [
    { version = "<8.2", python = ">=3.7,<3.10" },
    { version = ">=8.3.0,<9", python = "^3.10" },
]

[tool.poetry.scripts]
dbt-coverage = 'dbt_coverage.__init__:app'

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
